# cybersec

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
configs/: config.yaml  logging.yaml
deliverables/report/: one_page_report.md
deliverables/slides/: README.md
deliverables/video_demo/: README.md
scripts/: run_all.py  run_data_validation.py  run_evaluation.py  run_stream_simulation.py  run_training.py
src/data/: load_data.py  sampling.py  split_data.py  validate_data.py
src/features/: leakage_checks.py  preprocess.py  schema.py
src/models/: metrics.py  predict.py  registry.py  train_baseline.py  train_tree_model.py
src/monitoring/: alert_rate.py  drift.py  reporting.py
src/serving/: schemas.py  service.py
src/utils/: io.py  logging_utils.py  paths.py  seed.py
src/visualization/: dashboards.py  plots.py
tests/: conftest.py  test_data_validation.py  test_inference.py  test_monitoring.py  test_preprocess.py  test_sampling.py  test_training.py
